# CG_generator

./: .gitignore  CMakeLists.txt  Entity.py  EntityMother.py  Extractor.py  Game.py  Global.py  Main.py  Makefile  Makefile.py  Parser.py  README.md  Writer.py  example.cg  generator.py  output.cpp
CPP/custom/entities/: README.md
CPP/readonly/: CMakeLists_readonly.txt  Entity_readonly.cpp  Entity_readonly.h  Game_readonly.cpp  Game_readonly.h  common_readonly.h
CPP/readonly/entities/: Ball_readonly.cpp  Ball_readonly.h  Barrel_readonly.h
CPP/template/: Entity.cpp  Game.cpp  common.h
CPP/template/entities/: Ball.cpp  Ball.h  Mine.cpp  README.md
Generator/: Entity.py  EntityMother.py  Game.py  Global.py  Indentable.py  Main.py  Makefile.py  Parser.py  generator.py
Simulator/: Client.cpp  Client.h  GameOverException.java  InvalidFormatException.java  JoueurIdiot.cpp  Makefile
Workspace/Example/: configuration.cg  monolithe.cpp
Workspace/Example/readonly/: CMakeLists.txt  Entity_readonly.cpp  Game_readonly.cpp  common_readonly.h  mainMono_readonly.cpp  main_readonly.cpp
Workspace/Example/readonly/entities/: Barrel_readonly.cpp  Mine_readonly.cpp  Mine_readonly.h  Ship_readonly.cpp  Ship_readonly.h
Workspace/Example/template/: Entity.cpp  Entity.h  Game.cpp  Game.h
Workspace/Example/template/entities/: Barrel.cpp  Barrel.h  Mine.h  Ship.cpp  Ship.h
javaToCpp/: Client.cpp  Client.h  InvalidInputException.java  LostException.java  Makefile  MultiReferee.java  PlayerReferee.java  README.md  Referee.java  WinException.java  test.cpp
